# src/controllers/CapabilitiesController.js
@@ -12,8 +12,8 @@ const describeBuildings = async (request, response) => {
   await Controller.handleRequest(request, response, service.describeBuildings);
 };
 
-const describeMnt2018 = async (request, response) => {
-  await Controller.handleRequest(request, response, service.describeMnt2018);
+const describeMnt = async (request, response) => {
+  await Controller.handleRequest(request, response, service.describeMnt);
 };
 
 const getCollections = async (request, response) => {
@@ -31,7 +31,7 @@ const getLandingPage = async (request, response) => {
 
 module.exports = {
   describeBuildings,
-  describeMnt2018,
+  describeMnt,
   getCollections,
   getConformanceDeclaration,
   getLandingPage,
